# OperatingSystems

./: README.md
Lab1/: CMakeLists.txt
Lab1/src/: process.cpp
Lab10/src/: main.cpp
Lab11/src/: main.cpp
Lab3/Lab3/src/: MemoryAllocator.cpp
Lab4/src/: main.cpp
Lab5/data/: config.json
Lab6/src/: MMU.cpp
Lab7/src/: main.cpp
Lab8/src/: main.cpp
Lab9/src/: power_calculator.cpp
alh1310_lab5/: alh1310_lab5.txt
lab2/include/cse4733/: shortest_job_first.hpp
lab2/src/: first_come_first_served.cpp  round_robin.cpp  shortest_job_first.cpp
lab2/tests/: CMakeLists.txt
